# ml-portfolio

./: .gitignore  README.md  pyproject.toml
core/classification/: predict.py  train.py
core/regression/: predict.py  train.py
core/unsupervised/datasets/: sample_customers.csv
core/unsupervised/src/: plot_clusters.py  predict.py  train.py
databases/: spamhamdata.csv
financial/long-term/: app.py  predict.py  train.py
financial/long-term/model/: longterm_model.pkl
financial/long-term/templates/: index.html
financial/scalping/: scraper.py
src/: main.py  train.py
supervised-learning-class/regression/src/: train.py
supervised-learning/classification/diabetes/: app.py
supervised-learning/classification/diabetes/src/: predict.py  train.py
supervised-learning/classification/diabetes/templates/: index.html
supervised-learning/classification/health-lab/datasets/: download.py  generate.py
supervised-learning/classification/health-lab/src/: predict.py  train.py
supervised-learning/classification/iris-flower/: train.py
supervised-learning/classification/iris-flower/model/: iris-flower-model.pkl
supervised-learning/classification/iris-flower/src/: predict.py  train.py
supervised-learning/classification/titanic-surivival/datasets/: submission.csv
supervised-learning/classification/titanic-surivival/model/: titanic_model.pkl
supervised-learning/classification/titanic-surivival/src/: predict.py  train.py
supervised-learning/regression/house-price/: app.py
supervised-learning/regression/house-worker/: app.py
(+7 files in other folders)
