[project]
name = "ml-portfolio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.15.0",
    "datasets>=4.8.5",
    "flask>=3.1.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests[socks]>=2.34.2",
    "schedule>=1.2.2",
    "scikit-learn>=1.9.0",
    "ta",
    "xgboost",
    "yfinance>=1.4.1",
]
